syntax = "proto3";

package blackhole;

option go_package = "github.com/jzhang046/grpc-blackhole/blackhole";
option java_package = "com.github.jzhang046.grpc.blackhole.proto";
option java_multiple_files = true;

service BlackHole {
  rpc ConsumeAll(stream Bytes) returns (ByteCount) {}
  rpc EmitRandom(StreamSize) returns (stream Bytes) {}
  rpc EmitZeros(StreamSize) returns (stream Bytes) {}
}

message Bytes {
  bytes payload = 1;
}

message ByteCount {
  uint64 count = 1;
}

message StreamSize {
  uint32 length = 1;
  uint32 count = 2;
}
